# SDL-Template

./: .gitignore  CMakeLists.txt
SDL2/i686-w64-mingw32/include/SDL2/: SDL_main.h
src/: main.c
